--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <DOCTYPE! html>
 <html>
-
-
-
-
-
-
-
-
-
-
-
-
+  <head>
+    <title>"Hello World"</title>
+  </head>
+  <body>
+    <ol>
+      <li>I like watching anime</li>
+      <li>I like eating food</li>
+      <li>I like listening to music</li>
+      <li>I like spending time with friends and family</li>
+    </ol>
+  </body>
 </html>
