--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>"Hello World"</title>
   </head>
   <body>
+    <h3>Things I like to do</h3>
     <ol>
       <li>I like watching anime</li>
       <li>I like eating food</li>
