--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <DOCTYPE! html>
 <html>
   <head>
-    <title>"Hello World"</title>
+    <title>"About me"</title>
   </head>
   <body>
     <h3>Things I like to do</h3>
