--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
       <li>I like spending time with friends and family</li>
     </ol>
     <h4>Try these Tounge twisters</h4>
+    <ol>
+      <li>How much wood would a woodchuck chuck if a woodchuck could chuck wood? He would chuck, he would, as much as he could, and chuck as much wood as a woodchuck would if a woodchuck could chuck wood.</li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ol>
+    <h5>Why not try these other tounge twisters. Much harder than the other one, these are in Japanese</h5>
+    <ol>
+      <li></li>
+      <li></li>
+      
+    </ol>
   </body>
 </html>
 #use japanese tounge twisters, but english ones first!
