--- a/index.html
+++ b/index.html
@@ -12,19 +12,21 @@
       <li>I like listening to music</li>
       <li>I like spending time with friends and family</li>
     </ol>
-    <h4>Try these Tounge twisters</h4>
+    <h3>What I want to do in the Future</h3>
     <ol>
-      <li>How much wood would a woodchuck chuck if a woodchuck could chuck wood? He would chuck, he would, as much as he could, and chuck as much wood as a woodchuck would if a woodchuck could chuck wood.</li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>Have a job I love to do</li>
+      <li>Have a nice house in a rural area</li>
+      <li>Adopt children</li>
+      <li>Do something that helps the world</li>
     </ol>
-    <h5>Why not try these other tounge twisters. Much harder than the other one, these are in Japanese</h5>
+    <h3>Try these Tounge twisters</h3>
     <ol>
-      <li></li>
-      <li></li>
-      
+      <li>If two witches would watch two watches, which witch would watch which watch?</li>
+      <li>Can you can a can as a canner can can a can?</li>
+      <li>How much wood would a woodchuck chuck if a woodchuck could chuck wood? He would chuck, he would, as much as he could, and chuck as much wood as a woodchuck would if a woodchuck could chuck wood.</li>
+      <li>When a doctor doctors a doctor, does the doctor doing the doctoring doctor as the doctor being doctored wants to be doctored or does the doctor doing the doctoring doctor as he wants to doctor?</li>
+      <li>Betty Botter had some butter, “But,” she said, “this butter's bitter. If I bake this bitter butter, it would make my batter bitter. But a bit of better butter – that would make my batter better.”
+So she bought a bit of butter, better than her bitter butter, and she baked it in her batter, and the batter was not bitter. So 'twas better Betty Botter bought a bit of better butter.</li>
     </ol>
   </body>
 </html>
