--- a/index.html
+++ b/index.html
@@ -20,15 +20,7 @@
       <li>Do something that helps the world</li>
     </ol>
     <h3>Try these Tounge twisters</h3>
-    <a href="
-    <ol>
-      <li>If two witches would watch two watches, which witch would watch which watch?</li>
-      <li>Can you can a can as a canner can can a can?</li>
-      <li>How much wood would a woodchuck chuck if a woodchuck could chuck wood? He would chuck, he would, as much as he could, and chuck as much wood as a woodchuck would if a woodchuck could chuck wood.</li>
-      <li>When a doctor doctors a doctor, does the doctor doing the doctoring doctor as the doctor being doctored wants to be doctored or does the doctor doing the doctoring doctor as he wants to doctor?</li>
-      <li>Betty Botter had some butter, “But,” she said, “this butter's bitter. If I bake this bitter butter, it would make my batter bitter. But a bit of better butter – that would make my batter better.”
-  So she bought a bit of butter, better than her bitter butter, and she baked it in her batter, and the batter was not bitter. So 'twas better Betty Botter bought a bit of better butter.</li>
-    </ol>
+    <a href="http://busyteacher.org/4050-top-10-tongue-twisters-true-teachers-treasure.html"?> </a>
   </body>
 </html>
 
