--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
       <li>Adopt children</li>
       <li>Do something that helps the world</li>
     </ol>
-    <h3>Try these Tounge twisters</h3>
-    <a href="http://busyteacher.org/4050-top-10-tongue-twisters-true-teachers-treasure.html"?> </a>
+    <a href="http://busyteacher.org/4050-top-10-tongue-twisters-true-teachers-treasure.html"?> Try these tongue twisters</a>
   </body>
 </html>
 
