--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </ol>
     <a href="http://busyteacher.org/4050-top-10-tongue-twisters-true-teachers-treasure.html"?> Try these tongue twisters</a>
     <img src="http://az616578.vo.msecnd.net/files/2016/10/28/6361322441759127122028906463_assassinationclassroom.jpg" width="400" height="250" title="This is my favorite anime Assassination Classroom" align="right" hspace= "50" vspace="50">
-    <img src="http://2.bp.blogspot.com/-Y6uxSkW-Plc/V_ZptB3nrXI/AAAAAAC91Wk/4Jpnlgj6ouw/w1900/MR-27526-474121-5.jpg" width="400" height="250" title="My Favorite Anime of Spring 2017: The Royal Tutor" align="middle" hspace="50" vspace="50">
+    <img src="http://2.bp.blogspot.com/-Y6uxSkW-Plc/V_ZptB3nrXI/AAAAAAC91Wk/4Jpnlgj6ouw/w1900/MR-27526-474121-5.jpg" width="400" height="250" title="My Favorite Anime of Spring 2017: The Royal Tutor" align="top" hspace="50" vspace="50">
   </body>
 </html>
 
