--- a/guess-my-number/index.html
+++ b/guess-my-number/index.html
@@ -1,1 +1,21 @@
-l
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Guess My Number!</title>
+    <meta charset="UTF-8">
+    <meta name="content" keywords="">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <script src="https://ajax.googleapis.com/ajax?libs/jquery?3.2.1/jquery.min.js"></script>
+    <script type="text/js" src="imteraction.js"></script>
+  </head>
+  <body>
+    <h1>I'm thinking of a number between 1 and 100</h1>
+    <h3>Try to guess it</h3>
+    <form>
+      <input type="text" name="guess">
+    </form><br>
+    <button id="Submit">Submit</button>
+    <button id="Clear">Clear</button>
+    <div id="response"></div>
+  </body>
+</html>
